| Bug #49025 | mysqld-debug: missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "?func" | ||
|---|---|---|---|
| Submitted: | 24 Nov 2009 7:12 | Modified: | 18 Jun 2010 1:41 |
| Reporter: | Shane Bester | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S3 (Non-critical) |
| Version: | 5.1.41-debug | OS: | Microsoft Windows (XP64, 32-bit XP SP3) |
| Assigned to: | Davi Arnaut | Target Version: | 5.1+ |
| Triage: | Triaged: D3 (Medium) | ||
[24 Nov 2009 7:12]
Shane Bester
[24 Nov 2009 7:45]
Valeriy Kravchuk
Verified just as described also with 5.1.41-community on 32-bit XP: C:\Program Files\MySQL\MySQL Server 5.1\bin>mysqld-debug.exe --console 091124 9:42:05 [Note] Plugin 'FEDERATED' is disabled. 091124 9:42:06 InnoDB: Started; log sequence number 0 22492406 091124 9:42:08 [Note] Event Scheduler: Loaded 0 events 091124 9:42:08 [Note] mysqld-debug.exe: ready for connections. Version: '5.1.41-community-debug' socket: '' port: 3310 MySQL Community Serve r - Debug (GPL) 091124 9:43:26 [Note] mysqld-debug.exe: Normal shutdown mysqld-debug.exe: missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "?fu nc" mysqld-debug.exe: missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "?fu nc" 091124 9:43:26 [Note] Event Scheduler: Purging the queue. 0 events 091124 9:43:26 InnoDB: Starting shutdown... 091124 9:43:27 InnoDB: Shutdown completed; log sequence number 0 22492406 091124 9:43:27 [Note] mysqld-debug.exe: Shutdown complete
[5 Feb 2010 12:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/99410 3364 Davi Arnaut 2010-02-05 Bug#49025: mysqld-debug: missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "?func" The problem was that the dbug facility was being used after the per-thread dbug state had already been finalized. The was present in a few functions which invoked decrement_handler_count, which in turn invokes my_thread_end on Windows. In my_thread_end, the per-thread dbug state is finalized. Any use after the state is finalized ends up creating a new state. The solution is to process the exit of a function before the decrement_handler_count function is called. @ sql/mysqld.cc Process the function exit before decrement_handler_count is called, as it can end the per-thread dbug state on Windows.
[5 Feb 2010 13:45]
Davi Arnaut
Queued to 5.1-bugteam
[1 Mar 2010 8:43]
Bugs System
Pushed into 5.1.45 (revid:joro@sun.com-20100301083827-xnimmrjg6bh33o1o) (version source revid:joerg@mysql.com-20100212173307-ph563zr4wmoklgwd) (merge vers: 5.1.45) (pib:16)
[2 Mar 2010 14:36]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100302142746-u1gxdf5yk2bjrq3e) (version source revid:alik@sun.com-20100225090938-2j5ybqoau570mytu) (merge vers: 6.0.14-alpha) (pib:16)
[2 Mar 2010 14:42]
Bugs System
Pushed into 5.5.3-m2 (revid:alik@sun.com-20100302072233-t3uqgjzdukt1pyhe) (version source revid:alexey.kopytov@sun.com-20100209075938-mmcnyf6w631ozc45) (merge vers: 5.5.2-m2) (pib:16)
[2 Mar 2010 14:46]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100302072432-k8xvfkgcggkwgi94) (version source revid:alik@sun.com-20100224135227-rcqs9pe9b2in80pf) (pib:16)
[7 Mar 2010 20:19]
Paul DuBois
Noted 5.1.45, 5.5.3, 6.0.14 changelogs. For debug builds on Windows, warnings about incorrect use of debugging directives were written to the error log. The directives were rewritten to eliminate these messages.
[17 Jun 2010 12:14]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:01]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:martin.skold@mysql.com-20100609140708-52rvuyq4q500sxkq) (merge vers: 5.1.45-ndb-6.2.19) (pib:16)
[17 Jun 2010 13:42]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
